test/test-app/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: test-route
  namespace: cloudflare-gateway
spec:
  parentRefs:
    - name: gateway
      namespace: cloudflare-gateway
  hostnames:
    - test.novusweb.pro
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: test-service
          port: 80
          weight: 1
